--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 .master_container{
+  overflow:auto;
   background-color:aqua;
   height:1000px;
 }
@@ -7,22 +8,32 @@
   position:relative;
   background-color:blueviolet;
   margin-top:10px;
-  height:150px;
-}
-
-.hp_button{
-  background-color:greenyellow;
   height:80px;
 }
 
+.hp_button{
+  float:left;
+  width:50px;
+  height:20px;
+  position:absolute;
+  bottom:0px;
+  left:0px;
+  background-color:greenyellow;
+}
+
 .navbar{
+  float:right;
+  width:50px;
+  height:20px;
+  position:absolute;
+  bottom:0px;
+  right:0px;
   background-color:green;
-  height:50px;
 }
 
 .main_bg{
-  background-color:lightgray;
-  height:800px;
+  background-color:red;
+  height:150px;
 }
 
 .main_content{
