base positioning completed

--- a/styles.css
+++ b/styles.css
@@ -1,53 +1,84 @@
 .master_container{
-  overflow:auto;
   background-color:aqua;
+
+  overflow:auto;
   height:1000px;
 }
 
 .top_bar{
-  position:relative;
   background-color:blueviolet;
+
+  position:relative;
   margin-top:10px;
   height:80px;
+
 }
 
 .hp_button{
-  float:left;
+  background-color:greenyellow;
+
+
   width:50px;
   height:20px;
+
   position:absolute;
   bottom:0px;
   left:0px;
-  background-color:greenyellow;
+
 }
 
 .navbar{
-  float:right;
+  background-color:green;
   width:50px;
   height:20px;
   position:absolute;
   bottom:0px;
   right:0px;
-  background-color:green;
 }
 
 .main_bg{
   background-color:red;
-  height:150px;
+  height:600px;
+  position:relative;
+
 }
 
 .main_content{
-  background-color:lawngreen;
-  border:1px solid;
-  height:600px;
+  background-color:blue;
+  border:3px solid;
+  position:absolute;
+  top: 50%;
+
+  height:500px;
+  width:100%;
+  margin-top: -250px;
+
 }
 
 .summary{
   background-color:burlywood;
-  height:50px;
+  position:absolute;
+  left:0px;
+  top: 50%;
+
+
+  height:400px;
+  width:200px;
+  margin-left:20px;
+  margin-top:-200px;
+
 }
 
 .viz_menu{
   background-color:hotpink;
-  height:50px;
+
+  position:absolute;
+  top:50%;
+  right:0px;
+
+  height:400px;
+  width:200px;
+
+  margin-right:20px;
+  margin-top:-200px;
 }
